--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,9 @@
   <depend>cv_bridge</depend>
   <depend>sensor_msgs</depend>
 
+  <depend>octomap</depend>
+  <depend>octomap_msgs</depend>
+
   <export/>
 
 </package>
